# aiosonos

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: publish-to-pypi.yml  test.yml
aiosonos/: __init__.py  client.py  const.py  exceptions.py  group.py  player.py  utils.py
aiosonos/api/: __init__.py  _base.py  models.py  websockets.py
aiosonos/api/namespaces/: audioclip.py  group_volume.py  groups.py  playback.py  playback_metadata.py  playback_session.py  player_volume.py
scripts/: __init__.py  example.py
